--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,32 @@
 # Node.js
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-pnpm-debug.log
+client/node_modules/
+client/cnpm-debug.log
+client/yarn-debug.log
+client/yarn-error.log
+client/pnpm-debug.log
 
+server/node_modules/
+server/cnpm-debug.log
+server/yarn-debug.log
+server/yarn-error.log
+server/pnpm-debug.log
 # Build output
-dist/
-build/
+client/dist/
+client/build/
+server/dist/
+server/build/
 
 # Environment variables
 .env
-.env.local
-.env.*.local
+client/.env.local
+client/.env.*.local
+server/.env
+server/.env.local
+server/.env.*.local
 
 # Logs
-logs/
+client/logs/
+server/logs/
 *.log
 
 # Temporary files
