Fixed error handling in chat, unicode fix in python response, selection flow for rows, python code visible correctly

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ server/venv/Lib/*  # Ignore everything under the Lib directory in the server vir
 
 # Windows
 Thumbs.db
+
+#chrome
+client/.chrome-debug-profile
+
+#temp files
+server/src/temp
