--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "dompurify": "^3.2.1",
+    "html2canvas": "^1.4.1",
+    "plotly.js-dist": "^2.35.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
