--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.71.0",
-    "sass-loader": "^14.1.0"
-  },
+    "sass-loader": "^14.1.0"  },        
   "eslintConfig": {
     "root": true,
     "env": {
