Added revogrid table and removed older one. Updated the UI and optimized a bit

--- a/client/.vscode/launch.json
+++ b/client/.vscode/launch.json
@@ -9,9 +9,11 @@
       "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
       "sourceMapPathOverrides": {
-        "webpack:///./src/*": "${webRoot}/src/*",
-        "webpack:///src/*": "${webRoot}/src/*"
+        "webpack:///src/*": "${webRoot}/src/*",
+        "webpack:///./*": "${webRoot}/*",
+        "webpack:///*": "${webRoot}/*"
       },
+      "userDataDir": false,
       "runtimeArgs": [
         "--new-window",
         "--remote-debugging-port=9222",
