--- a/server/package.json
+++ b/server/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "Backend server for AI Table Analyzer",
-  "main": "src/app.js",
-  "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "debug": "cross-env DEBUG=app:* nodemon src/app.js"
-  },
-  "keywords": [
-    "node",
-    "express",
-    "openai",
-    "python"
-  ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.7",
-    "child_process": "^1.0.2",
-    "cors": "^2.8.5",
-    "debug": "^4.3.7",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "morgan": "^1.10.0",
-    "openai": "^4.72.0"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "debug": "^4.3.4",
-    "nodemon": "^3.1.7"
-  }
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Debug Server",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/src/app.js",
+            "envFile": "${workspaceFolder}/.env",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "sourceMaps": true,
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/**",
+                "!**/node_modules/**"
+            ],
+            "env": {
+                "DEBUG": "app:*"
+            },
+            "outFiles": [
+                "${workspaceFolder}/src/**/*.js"
+            ],
+            "restart": true,
+            "runtimeExecutable": "nodemon",
+            "runtimeArgs": ["--inspect"]
+        }
+    ]
 }
