--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@handsontable/vue3": "^14.6.1",
+    "@monaco-editor/loader": "^1.4.0",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "dompurify": "^3.2.1",
     "handsontable": "^14.6.1",
     "html2canvas": "^1.4.1",
+    "monaco-editor": "^0.52.0",
     "plotly.js-dist": "^2.35.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
@@ -30,6 +32,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "sass": "^1.71.0",
     "sass-loader": "^14.1.0"
   },
