--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "html2canvas": "^1.4.1",
     "monaco-editor": "^0.52.0",
     "plotly.js-dist": "^2.35.2",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
+    "ws": "^7.5.10",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
