--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.2.3",
     "handsontable": "^14.6.1",
     "html2canvas": "^1.4.1",
+    "marked": "^15.0.4",
     "monaco-editor": "^0.52.0",
     "plotly.js": "^2.35.2",
     "plotly.js-dist": "^2.35.2",
