--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@handsontable/vue3": "^14.6.1",
     "@mdi/font": "^7.3.67",
     "@monaco-editor/loader": "^1.4.0",
+    "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/background": "^1.3.2",
     "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.41.6",
