--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,15 @@
             ],
             "restart": true,
             "runtimeExecutable": "nodemon",
-            "runtimeArgs": ["--inspect"]
+            "runtimeArgs": [
+                "--inspect"
+            ]
         }
-    ]
+    ],
+    "devDependencies": {
+        "nodemon": "^3.1.9"
+    },
+    "dependencies": {
+        "multer": "^1.4.5-lts.1"
+    }
 }
