Added capability for displaying dashboard correctl with plotly itself

--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,12 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "dompurify": "^3.2.3",
+    "gridstack": "^11.2.0",
     "handsontable": "^14.6.1",
     "html2canvas": "^1.4.1",
     "marked": "^15.0.4",
     "monaco-editor": "^0.52.0",
+    "plotly": "^1.0.6",
     "plotly.js": "^2.35.2",
     "plotly.js-dist": "^2.35.2",
     "socket.io-client": "^4.8.1",
