--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
         "nodemon": "^3.1.9"
     },
     "dependencies": {
+        "danfojs": "^1.1.2",
         "multer": "^1.4.5-lts.1"
     }
 }
