--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "danfojs": "^1.1.2",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "p-queue": "^8.0.1"
     }
 }
