Added Markdown display for analysis response and made the data cleaning process simpler here and the dashboarding also better

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "gridstack": "^11.2.0",
     "handsontable": "^14.6.1",
     "html2canvas": "^1.4.1",
-    "marked": "^15.0.4",
+    "marked": "^15.0.6",
+    "md-editor-v3": "^5.2.1",
     "monaco-editor": "^0.52.0",
     "plotly": "^1.0.6",
     "plotly.js": "^2.35.2",
