--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,9 @@
     "dependencies": {
         "danfojs": "^1.1.2",
         "multer": "^1.4.5-lts.1",
-        "p-queue": "^8.0.1"
+        "p-queue": "^8.0.1",
+        "cors": "^2.8.5",
+        "openai": "^4.0.0",
+        "groq": "latest"
     }
 }
